# toycar_clock

./: README.md
app/MustangClock/: AlarmBox.qml  BleManager.cpp  BleManager.h  CMakeLists.txt  Main.qml  TimeBox.qml  WifiBox.qml  main.cpp
firmware/arduino/mustang_clock/: mustang_clock.ino
firmware/esp-idf/gatt_server/: sdkconfig
firmware/esp-idf/gatt_server/main/: main.c
firmware/esp-idf/tm1637_display/: CMakeLists.txt
firmware/esp-idf/tm1637_display/main/: CMakeLists.txt  tm1637.c  tm1637.h
firmware/gatt_server/main/include/: common.h
firmware/gatt_server/main/src/: gatt_svc.c
firmware/mustang_clock/: mustang_clock.ino
firmware/tm1637_display/main/: main.c  tm1637.c
